--- a/site_ViveBio/public/css/cart.css
+++ b/site_ViveBio/public/css/cart.css
@@ -12,7 +12,84 @@
     position: relative;
 }
 
-.cart_discount_payment {
+/*popup*/
+.cart_popup {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    display: none;
+}
+
+.cart_popup_container {
+    width: 300px;
+    height: 320px;
+    background: rgba(255, 255, 255, 0.795);
+    border-radius: 10px;
+}
+
+.cart_popup_container i{
+    display: flex;
+    width: auto;
+    justify-content: flex-end;
+    margin: 5px;
+    color: var(--verdeOscuro);
+    font-size: 1.3rem;
+    padding-right: 10px;
+}
+
+
+.cart_popup_dats{
+    width: 300px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 10px;    
+}
+
+
+.cart_popup_box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    position: relative;
+}
+
+.show-popup{
+    display:flex;
+}
+
+.cart_change_ubi {
+    background-color: var(--verdeOscuro);
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid black;
+    color: white;
+}
+
+.cart_control{
+    width: 80%;
+    height: 50px;
+    padding: 10px 5px;
+    border-radius: 5px;
+    border: 1px solid var(--verdeOscuro);
+}
+
+
+
+
+.cart_discount_payment,
+.cart_ubication_name {
     border: 1px solid var(--verdeFuerte);
     padding: 10px;
     margin: 1rem 0;
@@ -24,7 +101,7 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-.cart_input_payment {
+.cart_input_payment{
     border: 1px solid var(--verdeFuerte);
     padding: 10px;
     margin: 1rem 0;
@@ -42,7 +119,8 @@
 .cart_container .cart_button:hover,
 .cart_container .cart_box_more-less:hover,
 .cart_container select:focus,
-.cart_container select:hover {
+.cart_container select:hover,
+.cart_container .insert_ubication:hover {
     box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
     outline: none;
 }
@@ -197,7 +275,9 @@
     margin-left: 10px;
 }
 
-.cart_button {
+.cart_button,
+.insert_ubication {
+    cursor: pointer;
     padding: 10px;
     border-radius: 5px;
     background-color: var(--verdeOscuro);
@@ -210,11 +290,20 @@
     text-shadow: none;
 }
 
-.cart_sect_playment_sub {
+.insert_ubication{
+    margin-bottom: 4px;
+    margin-left: 10px;
+}
+
+.cart_sect_playment_sub,
+.cart_ubication {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.cart_ubication{
+    margin-bottom: 5px;
 }
 
 
@@ -243,7 +332,8 @@
         align-items: flex-start;
     }
 
-    .cart_sect_playment_sub {
+    .cart_sect_playment_sub,
+    .cart_ubication {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -261,12 +351,14 @@
 
     
 
-    .cart_sect_playment_sub label {
+    .cart_sect_playment_sub label,
+    .cart_ubication label{
         width: 30%;
         text-align: start;
     }
 
-    .cart_sect_playment_sub {
+    .cart_sect_playment_sub,
+    .cart_ubication {
         width: 100%;
     }
 
