--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -175,6 +175,35 @@
     text-align: center;
 }
 
+.historial_container{
+    width: 258px;
+}
+
+.user_carthistory{
+    width: 100%;
+    margin-bottom: 5px;
+    background-color: #7FA794;
+    border-radius: 5px;
+    border: 1px solid var(--verdeFuerte);
+}
+
+.user_products{
+    height: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .edit_user__info-pass {
     position: relative;
     margin: 15px 0 15px;
@@ -287,6 +316,13 @@
     .edit_user__head {
         justify-content: space-around;
     }
+
+    .historial_container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 @media(min-width: 645px) {
@@ -355,5 +391,10 @@
     .edit_user__info-container label {
         width: 25%;
         text-align: start;
+    }
+
+    .historial_container{
+        width: 80%;
+        margin-left: 10%;
     }
 }
