--- a/site_ViveBio/public/css/card.css
+++ b/site_ViveBio/public/css/card.css
@@ -68,14 +68,14 @@
     font-size: 15px;
 }
 
-.productCard .info-card{
+.productCard .info-card {
     padding: 5px;
     font-size: 20px;
     color: var(--VioletaOscuro);
     text-align: center;
 }
 
-.productCard .promocion{
+.productCard .promocion {
     font-size: 15px;
 }
 
@@ -142,7 +142,8 @@
     border-radius: 8px;
     border: solid 1px white;
 }
-.productCard .add_product_cart{
+
+.productCard .add_product_cart {
     display: inline-flex;
     gap: 15px;
     background-color: var(--verdeClaro-Opaco);
@@ -153,7 +154,23 @@
     justify-content: center;
     border-radius: 8px;
     border: solid 1px white;
-    color:white;
+    color: white;
+    text-shadow: 0 0 2px black;
+    font-size: 20px;
+}
+
+.add_favourite {
+    display: inline-flex;
+    gap: 15px;
+    background-color: var(--verdeClaro-Opaco);
+    margin-right: 10px;
+    height: 40px;
+    width: 45px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    border: solid 1px white;
+    color: white;
     text-shadow: 0 0 2px black;
     font-size: 20px;
 }
@@ -173,11 +190,7 @@
 
 }
 
-.productCard .producto-iconos .icons__hover:hover {
-    color: var(--azulMarino);
-    background-color: white;
-    border: 1px solid var(--azulMarino);
-}
+
 
 .card_barra {
     display: none;
@@ -256,7 +269,7 @@
 .productCard .estilo-c .info-container {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color:  #7fa794cb;
+    background-color: #7fa794cb;
     text-align: center;
     color: var(--VioletaOscuro);
     opacity: 0;
@@ -469,6 +482,12 @@
         padding: 20px;
     }
 
+    .add_favourite:hover {
+        color: var(--azulMarino);
+        background-color: white;
+        border: 1px solid var(--azulMarino);
+    }
+
     .productCard .producto {
         display: flex;
         flex-direction: column;
@@ -515,6 +534,11 @@
         align-content: flex-end;
         flex-wrap: wrap;
     }
+    .productCard .producto-iconos .icons__hover:hover {
+        color: var(--azulMarino);
+        background-color: white;
+        border: 1px solid var(--azulMarino);
+    }
 
     .productCard .box-texto-iconos {
         margin: auto;
@@ -539,6 +563,12 @@
 
     .productCard .rating {
         font-size: 12px;
+    }
+
+    .add_product_cart i:hover {
+        color: var(--azulMarino);
+        background-color: white;
+        border: 1px solid var(--azulMarino);
     }
 
     /*NUESTRA COMUNIDAD OPINA*/
@@ -571,11 +601,10 @@
     }
 }
 
-    @media (min-width: 1300px){
-        .productCard .producto__imagen {
-            width: 600px;
-            height: 100%;
-            margin: 0;
-        }
+@media (min-width: 1300px) {
+    .productCard .producto__imagen {
+        width: 600px;
+        height: 100%;
+        margin: 0;
     }
-
+}
