--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -130,7 +130,7 @@
     text-align: center;
 }
 
-.login_google a {
+.login_button_google{
     font-size: 30px;
     background-color: transparent;
     border-radius: 10px;
@@ -143,7 +143,7 @@
     padding: 6px 9px;
 }
 
-.login_facebook button {
+.login_button_facebook {
     font-size: 30px;
     background-color: transparent;
     border-radius: 10px;
@@ -152,6 +152,7 @@
     height: 50px;
     border: 1px solid var(--verdeFuerte);
     text-align: center;
+    padding: 6px 9px;
 }
 
 /* .login_remember-box{
@@ -196,7 +197,7 @@
         display: none;
     }
 
-    .login button:hover, .login a:hover {
+    .login_button_google:hover, .login_button_facebook:hover {
         transition: all 0.4s;
         background-color: var(--verdeFuerte);
     }
