--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -35,14 +35,14 @@
                     <form action="/Products/remove/<%= product.id %>?_method=DELETE" method="POST">
                       <button type="submit" title="Eliminar producto" class="icons__hover"><i class="fa-solid fa-trash-can"></i></button>
                     </form>
-                    <a href="/Products/edit/<%= product.id %>" class="icons__hover" title="Editar producto"><i
+                    < href="/Products/edit/<%= product.id %>" class="icons__hover" title="Editar producto"><i
                         class="fa-solid fa-pen"></i></a>
                     <% } %>
                       <% } %>
-                        <a href="#" class="icons__hover"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
+                        <button class="add_favourite" value="<%= product.id %>><i class="fa-regular fa-heart" title="Favorito"></i></button>
                         <a href="#" title="Compartir enlace" class="icons__hover" ><i class="fa-solid fa-share-nodes"></i></a>
                         <% if (locals.userLogin) { %>
-                          <button title="Agregar producto al carrito" class="add_product_cart icons__hover"
+                          <button title="Agregar producto al carrito" class="add_product_cart"
                             value="<%= product.id %> ">
                             <i class="fa-solid fa-cart-shopping" style="position: relative;">
                               <i class="fa-solid fa-slash card_barra">
