--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -35,10 +35,10 @@
                         <h1>Login</h1>
                         <div class="login_box-gf">
                             <div class="login_google">
-                                <a href="/auth/google"><i class="fab fa-google-plus" id="btnSingGoogle"></i></a>
+                                <a class="login_button_google" href="/auth/google"><i class="fab fa-google-plus" id="btnSingGoogle"></i></a>
                             </div>
                             <div class="login_facebook">
-                                <button type="submit"><i class="fab fa-facebook"></i></button>
+                                <a class="login_button_facebook" href="/auth/facebook"><i class="fab fa-facebook"></i></a>
                             </div>
                         </div>
                         <form method="POST" id="form-login">
