--- a/site_ViveBio/public/css/cart.css
+++ b/site_ViveBio/public/css/cart.css
@@ -130,7 +130,7 @@
     text-align: center;
     font-size: 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
